<resources>
    <string name="app_name">Currencies</string>
    <string name="action_settings">Settings</string>
    <string name="label_foreign_currency">Foreign Currency</string>
    <string name="label_currency_amount">Enter foreign currency amount here:</string>
    <string name="btn_calc_text">Calculate</string>
    <string name="label_calculated_result_text">Calculated result in home currency:</string>
    <string name="label_home_currency">Home Currency</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="menu_item_codes">search active codes</string>
    <string name="menu_item_invert">invert codes</string>
    <string name="menu_item_exit">exit</string>
</resources>
